Adding brute force attack cache feature