@@ -4,25 +4,18 @@ import com.application.entities.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.stream;
 
 public class UserPrincipal implements UserDetails {
 
-    private User user;
+    private final User user;
 
     public UserPrincipal(User user) { this.user = user; }
 
     @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-
-        return stream(this.user.getAuthorities()).map(SimpleGrantedAuthority::new).collect(Collectors.toList());
-
-    }
-
+    public Collection<? extends GrantedAuthority> getAuthorities() { return stream(this.user.getAuthorities()).map(SimpleGrantedAuthority::new).toList(); }
     @Override
     public String getPassword() { return this.user.getPassword(); }
     @Override
